# ThreeMaker

./: .gitignore  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.atl/: .skill-registry.cache.json  skill-registry.md
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: authored-map.ts  camera-rig.ts  character-sprite-placeholder.ts  character-sprite.ts  clamp.ts  debug-panel.ts  demo-content.ts  dialogue-ui.ts  fixture-paths.ts  floor-runtime.ts  floor-textures.ts  game-manifest.ts  global.d.ts  ground-y.ts  hd2d-knobs.ts  hd2d-pipeline.ts  i18n.ts  main.ts  map-document-runtime.ts  map-file.ts  map-playability.ts  noclip.ts  room-state.ts  spawn.ts  tauri-env.ts  walk-animation.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/test/: authored-map.test.ts  camera-rig.test.ts  character-sprite-placeholder.test.ts  character-sprite.test.ts  debug-panel.test.ts  demo-content.test.ts  dialogue-ui.test.ts  fixture-paths.test.ts  fixtures.ts  floor-runtime.test.ts  floor-textures.test.ts  game-manifest.test.ts  ground-y.test.ts  hd2d-knobs.test.ts  i18n.test.ts  locales.test.ts  map-document-runtime.test.ts  map-file.test.ts  (+6 more)
apps/editor/: index.html  package.json  tsconfig.json  vite.config.ts
apps/editor/src-tauri/: Cargo.toml  tauri.conf.json
apps/editor/src-tauri/capabilities/: default.json
apps/editor/src-tauri/src/: catalog_ipc.rs  lib.rs  main.rs
(+64 files in other folders)
