[package]
name = "threemaker-editor"
version = "0.0.0"
description = "ThreeMaker asset library + tile-painting editor shell"
edition = "2021"
publish = false

[lib]
name = "threemaker_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bundled: statically links SQLite so the editor never depends on a system
# SQLite install. Read-only IPC boundary for the asset catalog (see design's
# "Editor catalog read path" decision) — the webview never touches SQL
# directly, only these typed commands.
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
